less/app.less
/* ... */
.tags {
    li {
    @media screen and (min-width: @screen-lg) {
        .transition(all 0.4s ease-in-out);
    }
        .scale(1);
        opacity: 1;
        max-height: 75px;

        &.unavailable {
            max-height: 0;
            .scale(0);
            opacity: 0;
        }
    }
    .browse{
        text-align:center;
        font-size: 15px;
        margin-top:10px;
        a{
            color:@pine;
        }
    }
}

.tag-color(@color){
    border: lighten(desaturate(@color, 20%),5%);
    background-color: lighten(desaturate(@color, 20%),5%);
    color: white;
}
@tags: @pine;

.staff-picks.tag,
.staff-picks.tag:active,
.staff-picks.tag:focus{
        .tag-color(spin(@tags, 0 * @gradient-step));
}

.biography-and-memoir.tag,
.biography-and-memoir.tag:active,
.biography-and-memoir.tag:focus{
        .tag-color(spin(@tags, 1 * @gradient-step));
}

.book-club-ideas.tag,
.book-club-ideas.tag:active,
.book-club-ideas.tag:focus{
        .tag-color(spin(@tags, 2 * @gradient-step));
}

.comics-and-graphic-novels.tag,
.comics-and-graphic-novels.tag:active,
.comics-and-graphic-novels.tag:focus{
        .tag-color(spin(@tags, 3 * @gradient-step));
}

.cookbooks-and-food.tag,
.cookbooks-and-food.tag:active,
.cookbooks-and-food.tag:focus{
        .tag-color(spin(@tags, 4 * @gradient-step));
}

.eye-opening-reads.tag,
.eye-opening-reads.tag:active,
.eye-opening-reads.tag:focus{
        .tag-color(spin(@tags, 5 * @gradient-step));
}

.family-matters.tag,
.family-matters.tag:active,
.family-matters.tag:focus{
        .tag-color(spin(@tags, 6 * @gradient-step));
}

.for-art-lovers.tag,
.for-art-lovers.tag:active,
.for-art-lovers.tag:focus{
        .tag-color(spin(@tags, 7 * @gradient-step));
}

.for-history-lovers.tag,
.for-history-lovers.tag:active,
.for-history-lovers.tag:focus{
        .tag-color(spin(@tags, 8 * @gradient-step));
}

.for-music-lovers.tag,
.for-music-lovers.tag:active,
.for-music-lovers.tag:focus{
        .tag-color(spin(@tags, 9 * @gradient-step));
}

.funny-stuff.tag,
.funny-stuff.tag:active,
.funny-stuff.tag:focus{
        .tag-color(spin(@tags, 10 * @gradient-step));
}

.historical-fiction.tag,
.historical-fiction.tag:active,
.historical-fiction.tag:focus{
        .tag-color(spin(@tags, 11 * @gradient-step));
}

.identity-and-culture.tag,
.identity-and-culture.tag:active,
.identity-and-culture.tag:focus{
        .tag-color(spin(@tags, 12 * @gradient-step));
}

.its-all-geek-to-me.tag,
.its-all-geek-to-me.tag:active,
.its-all-geek-to-me.tag:focus{
        .tag-color(spin(@tags, 13 * @gradient-step));
}

.kids-books.tag,
.kids-books.tag:active,
.kids-books.tag:focus{
        .tag-color(spin(@tags, 14 * @gradient-step));
}

.ladies-first.tag,
.ladies-first.tag:active,
.ladies-first.tag:focus{
        .tag-color(spin(@tags, 15 * @gradient-step));
}

.lets-talk-about-sex.tag,
.lets-talk-about-sex.tag:active,
.lets-talk-about-sex.tag:focus{
        .tag-color(spin(@tags, 16 * @gradient-step));
}

.love-stories.tag,
.love-stories.tag:active,
.love-stories.tag:focus{
        .tag-color(spin(@tags, 17 * @gradient-step));
}

.mysteries-and-thrillers.tag,
.mysteries-and-thrillers.tag:active,
.mysteries-and-thrillers.tag:focus{
        .tag-color(spin(@tags, 18 * @gradient-step));
}

.nonfiction.tag,
.nonfiction.tag:active,
.nonfiction.tag:focus{
        .tag-color(spin(@tags, 19 * @gradient-step));
}

.poetry.tag,
.poetry.tag:active,
.poetry.tag:focus{
        .tag-color(spin(@tags, 20 * @gradient-step));
}

.rather-long.tag,
.rather-long.tag:active,
.rather-long.tag:focus{
        .tag-color(spin(@tags, 21 * @gradient-step));
}

.rather-short.tag,
.rather-short.tag:active,
.rather-short.tag:focus{
        .tag-color(spin(@tags, 22 * @gradient-step));
}

.realistic-fiction.tag,
.realistic-fiction.tag:active,
.realistic-fiction.tag:focus{
        .tag-color(spin(@tags, 23 * @gradient-step));
}

.science-and-society.tag,
.science-and-society.tag:active,
.science-and-society.tag:focus{
        .tag-color(spin(@tags, 24 * @gradient-step));
}

.science-fiction-and-fantasy.tag,
.science-fiction-and-fantasy.tag:active,
.science-fiction-and-fantasy.tag:focus{
        .tag-color(spin(@tags, 25 * @gradient-step));
}

.seriously-great-writing.tag,
.seriously-great-writing.tag:active,
.seriously-great-writing.tag:focus{
        .tag-color(spin(@tags, 26 * @gradient-step));
}

.tales-from-around-the-world.tag,
.tales-from-around-the-world.tag:active,
.tales-from-around-the-world.tag:focus{
        .tag-color(spin(@tags, 27 * @gradient-step));
}

.the-dark-side.tag,
.the-dark-side.tag:active,
.the-dark-side.tag:focus{
        .tag-color(spin(@tags, 28 * @gradient-step));
}

.young-adult.tag,
.young-adult.tag:active,
.young-adult.tag:focus{
        .tag-color(spin(@tags, 29 * @gradient-step));
}

.tags-wrapper .tag{
    width:100%;
}

.modal-content{
    border-radius:0;
    .tag{
        @media screen and (max-width: @screen-sm){
            font-size:11px;
            padding: 10px 5px;
        }
    }
}
/* ... */

